<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_job_menu">Job menu</string>
    <string name="description_like_button">Like </string>
    <string name="description_share_button">Repost</string>
    <string name="description_views">Views</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="post_text">Input text</string>
    <string name="description_post_publish">Publish post</string>
    <string name="error_empty_content">"Content can't be empty"</string>
    <string name="description_cancel">Cancel </string>
    <string name="description_edit_post">"Edit post "</string>
    <string name="chooser_share_post">Share</string>
    <string name="ok">OK</string>
    <string name="add_post">Add post</string>
    <string name="new_post">New post</string>
    <string name="description_video_preview">Video preview</string>
    <string name="google_play_unavailable">Google Api unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">User %1$s published new post:</string>
    <string name="notification_unknown_action">Notification display error</string>
    <string name="error">Error</string>
    <string name="retry_loading">Retry</string>
    <string name="image_attachment_description">Image</string>
    <string name="error_loading">An error occurred while loading data</string>
    <string name="new_posts">New posts</string>
    <string name="take_a_photo_description">Take a photo</string>
    <string name="pick_a_photo_from_gallery_description">Pick a photo from gallery</string>
    <string name="photo_preview_description">Photo preview</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="image_view_description">Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Input login</string>
    <string name="password">Input password</string>
    <string name="authorization">Sign in</string>
    <string name="logo">Logo</string>
    <string name="error_empty_login_and_pass">Error! Enter login and password</string>
    <string name="sign_in_error">"Sign in to like "</string>
    <string name="accept_sign_out">Are you sure you want to sign out?</string>
    <string name="input_name">Input name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_empty_field">Error! Fill in all fields</string>
    <string name="error_confirm_password">Passwords don\'t match. Please, try again</string>
    <string name="new_notification">New notification</string>
    <string name="notification_not_updated">Update the app, so notifications will be displayed again</string>
    <string name="sign_up_successful">Sign Up is successful</string>
    <string name="yesterday">Yesterday</string>
    <string name="link_icon_description">Link</string>
    <string name="add_link">Add link</string>
    <string name="add_a_link">Add a link</string>
    <string name="user_avatar">User avatar</string>
    <string name="line">-</string>
    <string name="add_a_job">Add a job</string>
    <string name="add_job_button_description">Add a job button</string>
    <string name="add_job_title">Add a job</string>
    <string name="company_name_hint">Company name</string>
    <string name="job_position_hint">Position</string>
    <string name="start_work_date_hint">Start of work</string>
    <string name="end_work_date_hint">End of work</string>
    <string name="feed_fragment_title">Feed</string>
    <string name="wall_fragment_title">User profile</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_up_title">Register</string>
    <string name="to">to</string>
    <string name="since">since</string>
    <string name="edit_job">Edit job information</string>
    <string name="my_profile">My profile</string>
    <string name="events">Events</string>
    <string name="take_part_at_event">Take part at event</string>
    <string name="event_format">Format of event:</string>
    <string name="date_of_event_header">Date of event:</string>
    <string name="you_participate">You participate</string>
    <string name="Online">Online</string>
    <string name="Offline">Offline</string>
    <string name="Sign_in_to_take_part">Sign in to take part at event</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="take_part">Join event</string>
    <string name="new_event">New event</string>
    <string name="edit_event">Edit event</string>
    <string name="play">Play</string>
    <string name="Stop">Stop</string>
    <string name="delete_audio">Delete audio</string>
    <string name="audiofile">audiofile</string>
    <string name="videofile">videofile</string>


</resources>