<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_launcher_foreground"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/photo_preview_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_spacing"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/photo_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/photo_preview_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove_photo"
            style="@style/Widget.AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/remove" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/backplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:autofillHints=""
            android:hint="@string/input_name"
            android:inputType="text"
            android:padding="@dimen/common_spacing"
            android:background="@drawable/background_rounded_grey_900"
            android:layout_marginVertical="@dimen/common_spacing"
            android:textColor="@color/white"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:autofillHints=""
            android:hint="@string/login"
            android:background="@drawable/background_rounded_grey_900"
            android:layout_marginVertical="@dimen/common_spacing"
            android:inputType="text"
            android:padding="@dimen/common_spacing"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded_grey_900"
            android:layout_marginVertical="@dimen/common_spacing"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"   android:padding="@dimen/common_spacing"
            android:minHeight="48dp"
            android:paddingBottom="@dimen/common_spacing" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:background="@drawable/background_rounded_grey_900"
            android:layout_marginVertical="@dimen/common_spacing"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:autofillHints=""
            android:padding="@dimen/common_spacing"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingBottom="@dimen/common_spacing" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/backplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/take_a_photo_description"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_add_photo_camera_24" />

        <ImageView
            android:id="@+id/pick_photo_from_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pick_a_photo_from_gallery_description"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_add_gallery_photo_24" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backplate" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarTheme"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>