<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900"
    tools:context="com.netology.nmedia.activity.EditPostFragment">


    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/icon_button_padding"
        android:text="@string/description_edit_post"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:hint="@string/post_text"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing"
                android:textSize="@dimen/new_post_preview_text_size" />

            <FrameLayout
                android:id="@+id/photo_preview_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/photo_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/photo_preview_description" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/remove_photo"
                    style="@style/Widget.AppTheme.RemoveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/remove"
                     />

            </FrameLayout>



        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/take_a_photo_description"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_add_photo_camera_24" />

        <ImageView
            android:id="@+id/pick_photo_from_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pick_a_photo_from_gallery_description"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_add_gallery_photo_24" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>